@@ -209,7 +209,8 @@ proc issue_2304_cleanup  {} {
    #
    # Clean up test.q if it's still around.
    #
-   if {[lsearch [get_queue_list] "test.q"] != -1} {
+   get_queue_list queue_list
+   if {[lsearch $queue_list "test.q"] != -1} {
       puts $CHECK_OUTPUT "Deleting test.q"
       del_queue test.q $execd_host 0 1
    }
