@@ -173,7 +173,8 @@ proc qstat_cleanup {} {
    #
    # Clean up test.q if it's still around.
    #
-   if {[lsearch [get_queue_list] "test.q"] != -1} {
+   get_queue_list queue_list
+   if {[lsearch $queue_list "test.q"] != -1} {
       puts $CHECK_OUTPUT "Deleting test.q"
       del_queue test.q $hostname 0 1
    }
@@ -3837,7 +3838,8 @@ proc qstat_profile {} {
    #
    # Paranoia....
    #
-   if {[lsearch [get_queue_list] "test.q"] != -1} {
+   get_queue_list queue_list
+   if {[lsearch $queue_list "test.q"] != -1} {
       puts $CHECK_OUTPUT "Deleting test.q"
       del_queue test.q $hostname 0 1
    }
